Fix about us alignment and footer for screens about 1300 px and less

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ header {
 /*about us section*/
 
 #about-us {
-background-color: pink;
+background-color: #c2e812;;
 padding: 20px 50px;
 }
 
@@ -83,13 +83,12 @@ margin-bottom: 30px;
 
 #reasons{
     line-height: 1.4; 
-    padding-left: 10px;
+    padding-left: 1.5%;
 }
 
 h2, h3 {
     font-family: "Karla", serif;
     color: #171219;
-    text-transform: uppercase;
 }
 
 h2 {
@@ -173,6 +172,10 @@ iframe{
     height: 100%;
     border-radius: 0%;
   }
+}
+
+footer {
+    padding: 2rem;
 }
 
 
